some things in report; better test; fix programa.pl

--- a/Prolog/T2c/entregavel.tex
+++ b/Prolog/T2c/entregavel.tex
@@ -37,23 +37,24 @@
   urlcolor=blue
 }
 
-\title{
-  Geração de números primos: \\
-  \large Miller-Rabin, Fermat e Lucas}
+\title{t2C}
 
-\author{Lucas João Martins}
+\author{Gustavo Borges França (15100741)
+        \and
+        Lucas João Martins (15100752)}
 \date{}
 
 \begin{document}
 
 \maketitle
 
-\section{Códigos das implementações}
-\lstinputlisting{../testes.pl}
+\section{Código dos testes}
+\lstinputlisting{testes.pl}
 
-\section{Sobre a geração}
+\section{Imagens}
+
 \section{Código-fonte}
-\href{https://github.com/lucasjoao/computer_security/tree/master/t04_prime}
+\href{https://github.com/lucasjoao/paradigmas/tree/master/Prolog/T2c}
 {GitHub}
 
 \end{document}
