finish report and tests

--- a/Prolog/T2c/entregavel.tex
+++ b/Prolog/T2c/entregavel.tex
@@ -80,16 +80,18 @@ Novamente a partir da figura base e após a execução do \emph{testefigpt} a im
 \end{figure}
 
 Mais uma vez a partir da figura base e após a execução do \emph{testefiggd} a imagem resultante é:
-% \begin{figure}[h]
-%   \includegraphics[width=\linewidth]{04_depois_testefiggd.png}
-%   \caption{Figura após testefiggd}
-% \end{figure}
+\begin{figure}[H]
+  \includegraphics[width=\linewidth]{04_depois_testefiggd.png}
+  \caption{Figura após testefiggd}
+\end{figure}
 
 Por fim, a partir também da figura base e após a execução do \emph{testefigge} a imagem resultante é:
-% \begin{figure}[h]
-%   \includegraphics[width=\linewidth]{05_depois_testefigge.png}
-%   \caption{Figura após testefigge}
-% \end{figure}
+\begin{figure}[H]
+  \includegraphics[width=\linewidth]{05_depois_testefigge.png}
+  \caption{Figura após testefigge}
+\end{figure}
+
+Se não ficar claro a diferença dos resultados através das figuras, pode-se verificar isso nos arquivos svg's gerados com a visualização do código svg gerado.
 
 \section{Código-fonte}
 \href{https://github.com/lucasjoao/paradigmas/tree/master/Prolog/T2c}
